--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,11 @@
 @tailwind utilities;
 
 :root {
-  font-family: 'Jost', Arial, sans-serif;
+  font-family: 'Jost', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
-  color-scheme: light dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,16 +24,21 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-image: url('https://im.vsco.co/aws-us-west-2/cd90ea/155530507/637094b22991eb37dd000007/5b71a94d-23aa-41c6-b42c-92f5f3c16fbf3623677695015032824.jpg');
-  /* @apply from-neutral-400 to-black bg-gradient-to-b bg-fixed; */
-  @apply bg-fixed bg-center bg-cover; 
+  @apply bg-slate-700 bg-fixed bg-center bg-cover w-full;
 }
 
-/* @media (prefers-color-scheme: light) {
-  :root {
-    @apply text-slate-800;
+#root {
+  @apply w-full xl:overflow-hidden;
+}
+
+@layer utilities {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
   }
-  body {
-    @apply to-slate-300;
+
+  /* For IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
-} */
+}
